# lie_robotics

./: CMakeLists.txt  README.md  setup.py
lie_robotics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: lie_robotics.cpp  lie_robotics.h  main.cpp
tests/: Indy7.py  LR_info.json  numpy_arrays12.json  numpy_arrays18.json  numpy_arrays19.json  numpy_arrays198.json  numpy_arrays28.json  numpy_arrays78.json  test.py
